fixed on mobile

--- a/www/static/sass/tapsaff.scss
+++ b/www/static/sass/tapsaff.scss
@@ -222,5 +222,9 @@ html {
                 font-size: 0.8rem;
             }
         }
+
+        h3 {
+            padding-left: 15px;
+        }
     }
 }
